# ConceptCaps

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  Makefile  README.md  data-prep.ipynb  environment.yml  error.err  index.html  mkdocs.yml  objects.inv  output.out  pyproject.toml  temp-requirements.txt  tmp.py
checkpoints/: epoch=4-step=15-v1.ckpt  epoch=4-step=15-v2.ckpt  epoch=4-step=15-v3.ckpt  epoch=4-step=15-v4.ckpt  epoch=4-step=15-v5.ckpt  epoch=4-step=15.ckpt  epoch=4-step=20-v1.ckpt  epoch=4-step=20-v2.ckpt  epoch=4-step=20-v3.ckpt  epoch=4-step=20.ckpt  epoch=4-step=40-v1.ckpt  epoch=4-step=40-v2.ckpt  epoch=4-step=40-v3.ckpt  epoch=4-step=40-v4.ckpt  epoch=4-step=40-v5.ckpt  epoch=4-step=40.ckpt  epoch=9-step=20-v1.ckpt  epoch=9-step=20-v2.ckpt  epoch=9-step=20-v3.ckpt  epoch=9-step=20-v4.ckpt  epoch=9-step=20-v5.ckpt  epoch=9-step=20.ckpt  epoch=99-step=400.ckpt  epoch=99-step=800-v1.ckpt  epoch=99-step=800-v2.ckpt  epoch=99-step=800.ckpt
config/: caption_dataset.yaml  caption_evaluation.yaml  caption_fine_tuning.yaml  caption_generation.yaml  caption_inference.yaml  caption_pipeline.yaml  caption_test_generation.yaml  config.yaml  full_pipeline.yaml  index.html  tags_dataset.yaml  tcav.yaml  tcav_config.yaml  tta.yaml  tta_generation.yaml  tta_inference.yaml  vae_training.yaml
data/: base_per_sample_scores.csv  concepts_to_tags.json  emotions.txt  index.html  instruments.txt  music_caps_transformed_instrument.csv  musiccaps_per_sample_scores.csv  musiccaps_tag_frequencies.csv  musiccaps_tags_to_description_dataset.csv  tcav_genre_classification_results.json  zero_shot_per_sample_scores.csv  zero_shot_predictions.csv
docs/: DATASET_CARD.md  config.md  configuration.md  data.md  index.md  notebooks.md  pipeline.md  vae_comparison.md  vae_diversity_metrics.md  vae_training.md
models/: best-genre-classifier.ckpt  multilabel_vae.pth  vae_final.pth  vae_large.pth  vae_medium.pth  vae_small.pth  vae_small_vae.pth
notebooks/: 1. Taxonomy and dataset distillation.ipynb  2. VAE aspect modeling.ipynb  3. MusicCaps and VAE generated dataset comparison.ipynb  4. Conditioned caption inference.ipynb  5. Audio generation analysis.ipynb  6. Create final datasets.ipynb  6. TCAV for genre classification.ipynb  7. Create final datasets.ipynb  7. TCAV for genre classification.ipynb  TCAV_Music_Genre_Analysis.ipynb  caption-generation.ipynb  caption-inference-analysis.ipynb  captions-dataset.ipynb  clap-score-analysis.ipynb  clap-tcav-genre-analysis.ipynb  codebook-analysis.ipynb  full-inference-analysis.ipynb  generate-causal-tags-dataset.ipynb  generate-causal-tags-dataset2.ipynb  generate-random-tags-dataset.ipynb  generate-tags-dataset.ipynb  generate-vae-tags-dataset.ipynb  index.html  mtg-jaemdo-tags-dataset.ipynb  prepare-tags-datasets.ipynb  tags-datasets-comparison.ipynb  tags-to-description-dataset.ipynb  tcav-analysis.ipynb  tcav-genre-classifier.ipynb  trak-analysis.ipynb  vae-description-dataset.ipynb  (+2 more)
(+451 files in other folders)
