[tool.poetry]
name = "music-gen-interpretability"
version = "0.1.0"
description = ""
authors = ["Bruno Sienkiewicz <01178591@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
pandas = "^2.2.3"
captum = "^0.8.0"
transformers = "^4.51.3"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
mkdocs-section-index = "^0.3.10"
mkdocstrings = "^0.29.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.1"
seaborn = "^0.13.2"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
