[tool.poetry]
name = "music_gen_interpretability"
version = "0.1.0"
description = ""
authors = ["Bruno Sienkiewicz <01178591@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
hydra-core = "^1.3.2"
pandas = "^2.2.3"
captum = "^0.8.0"
transformers = "^4.51.3"
scikit-learn = "^1.6.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
mkdocs-section-index = "^0.3.10"
mkdocstrings = "^0.29.1"


[tool.poetry.group.dev.dependencies]
matplotlib = "^3.10.1"
seaborn = "^0.13.2"
torch = {version = "^2.7.0+cpu", source = "pytorch_cpu"}
torchvision = {version = "^0.22.0+cpu", source = "pytorch_cpu"}


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[[tool.poetry.source]]
name = "pytorch_cuda"
url = "https://download.pytorch.org/whl/cu128"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
