[tool.poetry]
name = "music_gen_interpretability"
version = "0.1.0"
description = ""
authors = ["Bruno Sienkiewicz <01178591@pw.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
scikit-learn = "^1.6.1"
rich = "^14.0.0"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
click = "^8.2.0"
pyparsing = "^3.2.3"
librosa = "^0.11.0"
ipywidgets = "^8.1.7"
rouge-score = "^0.1.2"
nltk = "^3.9.2"
bert-score = "^0.3.13"
psutil = "^7.1.2"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.12"
mkdocs-section-index = "^0.3.10"
mkdocstrings = "^0.29.1"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
run_tcav = "music_gen_interpretability.scripts.run_tcav:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
